webhost/kubernetes/service.yaml
#
# Standard Kubernetes for deploying the web host for the SPA
#

kind: Service
apiVersion: v1
metadata:
  name: webhost-svc
spec:
  selector:
    app: webhost
  ports:
  - protocol: "TCP"
    port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhost
  labels:
    app: webhost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhost
  template:
    metadata:
      labels:
        app: webhost
        
    spec:
      containers:
      - name: webhost
        image: webhost:v1
        imagePullPolicy: Never
