webhost/kubernetes/ingress.yaml
#
# Expose the web host at a URL such as https://web.example.com
# https://www.digitalocean.com/community/tutorials/how-to-install-and-use-istio-with-kubernetes
#

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webhost-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: example-com-tls
    hosts:
    - web.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webhost-virtualservice
spec:
  hosts:
  - web.example.com
  gateways:
  - webhost-gateway
  http:
  - route:
    - destination:
        host: webhost-svc
        port:
          number: 3000
