webhost/kubernetes/virtualservice.yaml
#
# Expose the web host at https://web.example.com
#

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webhost-virtualservice
spec:
  hosts:
  - web.example.com
  gateways:
  - web-gateway
  http:
  - route:
    - destination:
        host: webhost-svc
